# SIEM-agent

./: .gitignore  LICENSE
cef_agent/: Cargo.toml  DOC.md  INSTALL.md  install.sh  uninstall.sh
cef_agent/src/: api.rs  cli.rs  config.rs  error.rs  main.rs  prompt.rs  registration.rs  watcher.rs
